--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#f2e0e6</color>
     <color name="searchBackground">#4d4b4b</color>
+    <color name="borderLine">#4d4b4b</color>
     <color name="mainText">#FFF</color>
+    <color name="titleBackground">#000000</color>
 </resources>
