--- a/app/src/main/res/layout/stats_template.xml
+++ b/app/src/main/res/layout/stats_template.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="12dp">
+    android:layout_margin="12dp"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/champImage"
@@ -11,19 +12,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/championName"
-        android:text="Annie"
-        android:fontFamily="monospace"
-        android:textColor="@color/mainText"
-        android:textSize="32sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <View
-        android:background="@color/mainText"
-        android:padding="10dp"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="4dp" />
+        android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/championName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:fontFamily="monospace"
+            android:textColor="@color/mainText"
+            android:textSize="32sp" />
+
+        <TextView
+            android:id="@+id/championWinRate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:fontFamily="monospace"
+            android:textColor="@color/mainText"
+            android:textSize="25sp" />
+    </FrameLayout>
 </LinearLayout>
