--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,28 +7,4 @@
     android:background="@drawable/background"
     android:padding="8sp"
     tools:context="frielstudios.lolstats.MainActivity">
-
-    <EditText
-        android:id="@+id/playerSearch"
-        android:hint="Summoner Name"
-        android:layout_margin="4dp"
-        android:inputType="text"
-        android:textSize="20sp"
-        android:textColor="@color/mainText"
-        android:gravity="center"
-        android:background="@color/searchBackground"
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <Button
-        android:id="@+id/buttonPlayerSearch"
-        android:hint="Find Summoner"
-        android:textSize="32sp"
-        android:padding="32dp"
-        android:textColor="@color/mainText"
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
 </LinearLayout>
