--- a/app/src/main/res/layout/stats_template.xml
+++ b/app/src/main/res/layout/stats_template.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="12dp"
@@ -8,20 +7,20 @@
 
     <ImageView
         android:id="@+id/champImage"
-        android:padding="8dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:padding="8dp" />
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/championName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:typeface="monospace"
             android:gravity="start"
-            android:fontFamily="monospace"
             android:textColor="@color/mainText"
             android:textSize="32sp" />
 
@@ -29,9 +28,24 @@
             android:id="@+id/championWinRate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:typeface="monospace"
             android:gravity="start"
-            android:fontFamily="monospace"
             android:textColor="@color/mainText"
             android:textSize="25sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="2dp"
+            android:layout_gravity="bottom"
+            android:background="@color/colorAccent" />
+
+        <ImageView
+            android:id="@+id/championPerformance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_marginTop="75dp"
+            android:src="@drawable/flame" />
     </FrameLayout>
 </LinearLayout>
